<resources>
    <string name="app_name">DIALYBOOK</string>
    <string name="choose_your_chategory_to_login">CHOOSE YOUR CHATEGORY TO LOGIN</string>
    <string name="owner">OWNER</string>
    <string name="employee">EMPLOYEE</string>
    <string name="login">LOGIN</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="LOGIN1">LOGIN</string>
    <string name="signup">Signup</string>
    <string name="employee_login">EMPLOYEE LOGIN</string>
    <string name="enter_user_name">ENTER USER NAME</string>
    <string name="user_details">USER DETAILS</string>
    <string name="enter_full_name">ENTER FULL NAME</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="gender">GENDER</string>
    <string name="enter_address">ENTER ADDRESS</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="enter_userpassword">ENTER PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="user_signup">SIGNUP</string>
    <string name="present_branch">PRESENT BRANCH</string>
    <string name="sell">SELL</string>
    <string name="history">HISTORY</string>
    <string name="logout">LOGOUT</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="branch_settings">BRANCH SETTINGS</string>
    <string name="user_name">USER NAME</string>
    <string name="select_profile">SELECT PROFILE</string>
    <string name="add_seller">ADD SELLER</string>
    <string name="add_stock">ADD STOCK</string>
    <string name="history_bills">HISTORY BILLS</string>
    <string name="stock_left">STOCK LEFT</string>
    <string name="product_sales">PRODUCT SALES</string>
    <string name="enter_employee_name">ENTER EMPLOYEE NAME</string>
    <string name="textview">TextView</string>
    <string name="select_quantity">SELECT ITEM UMITS</string>
</resources>